@@ -76,6 +76,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - NEW: Add transitive dependency version and branch override mechanism (IVY-784)
 - NEW: Add new packager resolver (IVY-829) (thanks to Archie Cobbs)
 
+- IMPROVEMENT: Support atomic publish with sub directory structure (IVY-856)
 - IMPROVEMENT: Provide ant task to retrieve information from published ivy modules (IVY-838) (thanks to David Maplesden)
 - IMPROVEMENT: Install task fails but reason is not displayed without using -debug or -verbose (IVY-834)
 - IMPROVEMENT: SSH resolver doesn't support keyboard-interactive authentication (IVY-836) (thanks to Tobias Himstedt)
